# poly-arb

./: .gitignore  Cargo.toml  README.md  config.toml.example
deploy/: tuning.sh
src/: arb_engine.rs  auth.rs  config.rs  fees.rs  lib.rs  logger.rs  main.rs  market_discovery.rs  merger.rs  order_manager.rs  orderbook.rs  presigner.rs  risk.rs  store.rs  types.rs  ws_market.rs  ws_user.rs
src/web/: handlers.rs  mod.rs  state.rs
src/web/static/: index.html
tests/: test_arb_engine.rs  test_config.rs  test_orderbook.rs  test_presigner.rs  test_risk.rs
