[package]
name = "poly-arb"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.8", features = ["std", "serde"] }
alloy-rlp = "0.3"
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
futures-util = "0.3"
hex = "0.4"
hmac = "0.12"
k256 = { version = "0.13", features = ["ecdsa"] }
ordered-float = { version = "4", features = ["serde"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
rust-embed = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "chrono", "macros"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = "0.5"
